--- a/main.org
+++ b/main.org
@@ -72,35 +72,6 @@ Warning level
 #+END_SRC
 For refresh packages run (M-x package-refresh-contents)
 
-** straight.el
-
-Trying out =straight.el= for package management.  So far so good!
-
-#+BEGIN_SRC emacs-lisp :results output silent
-  ;; Bootstrap straight.el
-  (defvar bootstrap-version)
-  (let ((bootstrap-file
-        (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
-        (bootstrap-version 5))
-    (unless (file-exists-p bootstrap-file)
-      (with-current-buffer
-          (url-retrieve-synchronously
-          "https://raw.githubusercontent.com/raxod502/straight.el/develop/install.el"
-          'silent 'inhibit-cookies)
-        (goto-char (point-max))
-        (eval-print-last-sexp)))
-    (load bootstrap-file nil 'nomessage))
-
-  ;; Always use straight to install on systems other than Linux
-  (setq straight-use-package-by-default (not (eq system-type 'gnu/linux)))
-
-  ;; Use straight.el for use-package expressions
-  (straight-use-package 'use-package)
-
-  ;; Load the helper package for commands like `straight-x-clean-unused-repos'
-  (require 'straight-x)
-#+END_SRC
-
 * Backup
 This is one of the things people usually want to change right away. By
 default, Emacs saves backup files in the current directory. These are
@@ -253,10 +224,10 @@ find them with C-x C-f (find-file) if I really need to.
     (set-face-background 'vertical-border "gray")
     (set-face-foreground 'vertical-border (face-background 'vertical-border)))
 
- ;; (dy-light-theme)
+ (dy-light-theme)
 
 
-    (load-theme 'ef-cyprus t)
+    ; (load-theme 'ef-cyprus t)
 
     ; (load-theme 'adwaita t)
     ; (load-theme 'gruvbox-dark-hard t)
@@ -549,10 +520,6 @@ For backward word and forwardword
 	      ))
 	)))
 
-
-
-  
-
   (add-hook 'git-commit-setup-hook 'dy-git-commit-setup))
 #+END_SRC
 
@@ -670,6 +637,25 @@ TODO remove this in some future:
     (flycheck-set-checker-executable (quote python-mypy)
                                   (executable-find "mypy"))))
 
+;; TODO: work on python-ruff (split errors and warnings?)
+(flycheck-define-checker python-ruff
+  "Ruff syntax and type checker."
+  :command ("ruff"
+            "check"
+            "--quiet"
+            source)
+  :error-patterns
+  ((warning line-start
+            (file-name) ":" line ":" (optional column ":") " "
+            (id (one-or-more (any alpha)) (one-or-more digit)) " "
+            (message (one-or-more not-newline))
+            line-end))
+  :working-directory flycheck-python-find-project-root
+  :modes python-mode)
+(setq flycheck-checkers (append flycheck-checkers  '(python-ruff)))
+
+
+
   (defun dy-python-setup ()
     ; Check with flake8, pylint, and mypy. python-mypy already runs
     ; python-flake8, so there's no need to mention it here. However, we still
@@ -677,6 +663,7 @@ TODO remove this in some future:
     ; so-called "checker chain", as per
     ; https://www.flycheck.org/en/latest/user/syntax-checkers.html#configuring-checker-chains.
     (flycheck-add-next-checker 'python-flake8 'python-pylint)
+    (flycheck-add-next-checker 'python-pylint 'python-ruff)
     (add-hook 'flycheck-before-syntax-check-hook #'set-flychecker-executables
       'local)
     ; Start Flycheck.
@@ -1149,6 +1136,18 @@ TODO remove this in some future:
   (org-src-preserve-indentation nil)
   (org-edit-src-content-indentation 0)
   :config
+
+  (defun dy-clear-image-cache ()
+  "Clear cached images"
+  (interactive)
+  (clear-image-cache))
+
+  (add-hook
+   'org-mode-hook
+   (lambda()
+     (keymap-set evil-normal-state-local-map "<SPC> m f" 'dy-clear-image-cache)
+  ))
+
   (org-babel-do-load-languages
    'org-babel-load-languages
    '(
@@ -1972,6 +1971,11 @@ If in compilation buffer there are many lines it start to be a very slow
   :ensure t)
 #+END_SRC
 
+* Shell
+#+BEGIN_SRC emacs-lisp :results output silent
+(setq shell-file-name "zsh")
+#+END_SRC
+
 * C++
 ** Clang-Format
 #+BEGIN_SRC emacs-lisp :results output silent
@@ -2121,7 +2125,6 @@ If in compilation buffer there are many lines it start to be a very slow
   :ensure t
 )
 #+END_SRC
-
 
 * Dy
 #+BEGIN_SRC emacs-lisp :results output silent
